# pre-commit-hooks

./: .gitattributes  .gitleaks.toml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  run-gitleaks.sh
pre_commit_hooks/: __init__.py  all_hooks.py  detect_private_key.py  protect_paths.py
